# cities-api

./: Cargo.toml  README.md  docker-compose.yml  test_wkts.txt
migrations/: 20230618141543_initial-table.sql  20230618152141_update-table-cities.sql
src/: db.rs  main.rs  models.rs  query_builder.rs  routes.rs  seed.rs  server.rs  utils.rs
