[package]
name = "cities_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.18", features = ["json"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.68"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0.51"
sqlx = { version = "0.6.3", features = [  "runtime-tokio-rustls", "postgres", "macros" ]}
dotenv = "0.15.0"
csv = "1.2.2"
tower-http = {version = "0.4.1", features=["cors"]}
cities-common = { path = "../cities-common", features=["sqlxrow"]}
simple-query-builder = { path = "../simple-query-builder" }
